Tools/DumpRenderTree/atk/AccessibilityCallbacks.h
@@ -29,7 +29,14 @@
 #ifndef AccessibilityCallbacks_h
 #define AccessibilityCallbacks_h
 
+#include "AccessibilityNotificationHandlerAtk.h"
+#include "AccessibilityUIElement.h"
+
+const PlatformUIElement GlobalNotificationKey = 0;
+
 void connectAccessibilityCallbacks();
 void disconnectAccessibilityCallbacks();
+void addAccessibilityNotificationHandler(AccessibilityNotificationHandler*);
+void removeAccessibilityNotificationHandler(AccessibilityNotificationHandler*);
 
 #endif
