Tools/DumpRenderTree/atk/AccessibilityUIElementAtk.cpp
@@ -29,6 +29,7 @@
 
 #if HAVE(ACCESSIBILITY)
 
+#include "AccessibilityNotificationHandlerAtk.h"
 #include <JavaScriptCore/JSStringRef.h>
 #include <JavaScriptCore/OpaqueJSString.h>
 #include <atk/atk.h>
@@ -1027,13 +1028,26 @@ JSStringRef AccessibilityUIElement::url()
 
 bool AccessibilityUIElement::addNotificationListener(JSObjectRef functionCallback)
 {
-    // FIXME: implement
-    return false;
+    if (!functionCallback)
+        return false;
+
+    // Only one notification listener per element.
+    if (m_notificationHandler)
+        return false;
+
+    m_notificationHandler = new AccessibilityNotificationHandler();
+    m_notificationHandler->setPlatformElement(platformUIElement());
+    m_notificationHandler->setNotificationFunctionCallback(functionCallback);
+
+    return true;
 }
 
 void AccessibilityUIElement::removeNotificationListener()
 {
-    // FIXME: implement
+    // Programmers should not be trying to remove a listener that's already removed.
+    ASSERT(m_notificationHandler);
+
+    m_notificationHandler = 0;
 }
 
 bool AccessibilityUIElement::isFocusable() const
